Fix padding and spacing issue

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -6,42 +6,24 @@
   margin-left: auto;
   margin-right: auto;
   max-width: 960px;
-  padding-left: 5%;
-  padding-right: 5%;
-
-  @media @tablet {
-    max-width: 100%;
-    width: 100%;
-  }
+  width: 90%;
 }
 
 // Move spacing to first widget in the main zone (not sections)
 .edit #page-zones__main-overlay + .widget:not(.row),
 #page-zones__main > .widget:not(.row):first-child {
   margin-top: 40px;
-
-  @media @tablet {
-    margin-top: 20px;
-  }
 }
 
 
 // Move spacing to last widget in the main zone (not sections)
 #page-zones__main > .widget:not(.row):last-child {
   margin-bottom: 40px;
-
-  @media @tablet {
-    margin-bottom: 20px;
-  }
 }
 
 #page-zones__main > .row + .widget:not(.row),
 #page-zones__main > .widget:not(.row) + .row {
   margin-top: 20px;
-
-  @media @tablet {
-    margin-top: 30px;
-  }
 }
 
 ul.widget__list {
