--- a/stylesheet.less
+++ b/stylesheet.less
@@ -2100,7 +2100,7 @@ blockquote {
 
 @media only screen and (min-width: 1140px) {
   .wrapper {
-    width: 960px; /* 1140px - 10% for margins */
+    max-width: 960px; /* 1140px - 10% for margins */
     margin: 0 auto;
   }
 }
